app/base/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bgd
  namespace: bgd
spec:
  host: 'PATH_ME'
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd
    weight: 100
